# opaq

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: cliff.toml
.github/workflows/: build.yml  pr.yml  release.yml  tag-release.yml
packaging/arch/: PKGBUILD
src/: cli.rs  crypto.rs  error.rs  filter.rs  keychain.rs  lib.rs  main.rs  model.rs  run.rs  scrubber.rs  search.rs  store.rs
src/commands/: add.rs  cleanup.rs  edit.rs  export_cmd.rs  import_cmd.rs  init.rs  lock.rs  mod.rs  remove.rs  reveal.rs  run.rs  search.rs  setup.rs  setup_claude.rs  shadows.rs  unlock.rs
tests/: integration.rs
